testData/diagnostics/unfinished_hex.diag.txt
testData/diagnostics/unfinished_hex.nut line = (1) column = (8) : error: expected hex digits after '0x'
println(0x)
        ^-

